# mdal

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Makefile.toml  README.md  mda.sh
.cargo/: config.toml
lib/md-srv/: Cargo.toml
lib/mda-derive/: Cargo.toml
lib/mda-derive/src/: lib.rs
pkg/p2p/: Cargo.toml
src/: lib.rs  parse.rs
src/server/: config.rs  connection.rs  handlers.rs  mod.rs
src/server/handlers/: completion.rs  goto.rs  hover.rs  symbols.rs
src/types/: mod.rs
