[package]
name = "mda"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "build.rs",
    "res"
]
default-run = "mdals"
authors = [ "Chris P <clp@clp.is>"]
homepage = "clp.is/p/mdals"
exclude = [
    "/.gitignore", "/.git", "/.github", "/.travis.yml"
]
repository = "https://github.com/clpi/mda.git"
documentation = "https://docs.rs/mda-ls"
readme = "README.md"
license = "MIT"
description = """
Rust library and set of binaries to provide
intelligent semantic analysis of personal 
markdown files, however you store them.
Plus a try at extending markdown with a new
markup format superset."""
keywords = ["markdowwn", "wiki", "lsp", "ls"]
publish = true
categories = [ "parser-implementations" ]

[[bin]]
name = "mdals"
path = "src/bin/mdals.rs"
bench = false

[[test]]
path = "test/server.rs"
harness = false
name = "server"

[[test]]
path = "test/parser.rs"
harness = false
name = "parser"

[[test]]
path = "test/store.rs"
harness = false
name = "store"

[[test]]
path = "test/codegen.rs"
name = "codegen"
harness = false

[[test]]
path = "test/net.rs"
name = "net"
harness = false

[lib]
name = "mdals"
path = "src/lib.rs"
doctest = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
repository = "clpi/mda"

[dependencies]
chumsky = "0.8.0"
env_logger = "0.9.0"
ropey = "1.3.2"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
indexmap = { version = "1.8.1", features = ["serde", "rayon"]}
tower-lsp = { version = "0.17.0"}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
async-trait = "0.1.53"
lru = "0.7.6"
url = { version = "2.2.2", features = ["serde"] }
crossbeam-channel = "0.5.4"
pulldown-cmark = { version = "0.9.1", features = ["serde"] }
uuid = { version = "1.1.0", features = ["serde", "v4"] }
lsp-server = "0.6.0"
tower-lsp-macros = "0.6.0"
num_cpus = "1.13.1"
rand = { version = "0.8.5", features = ["serde", "log"] }
futures = "0.3.21"
bincode = "1.3.3"
toml = "^0.5"
dirs = "4.0.0"

[dev-dependencies]
color-eyre = "0.6.1"

[build-dependencies]



[debug]
incremental = true

[profile.dev]
opt-level = 2
build-override = { opt-level = 2 }

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
