[package]
name = "mda-derive"
version = "0.1.0"
edition = "2021"

[lib]
name = "mda_derive"
crate-type = ["cdylib"]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["full"] }
